--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,3 +104,8 @@
       transform: translateY(0);
     }
   }
+  @media (max-width: 453px) {
+    .hideBelow453{
+      display: none !important;
+    }
+  }
