--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,14 +58,7 @@
   }
 }
 
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+
 #outOfContextImageDiv > span{
   overflow: visible!important;
 }
@@ -74,38 +67,10 @@
 
 /* Navbar animation */
 
-  /* Initial Animation */
-  @keyframes fadeInDown {
-    0% {
-      opacity: 0;
-      transform: translateY(-20px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
+ 
+  @media (min-width: 2000px) {
+    .above2000px{
+      height: 32rem;
     }
   }
 
-  /* Scroll-Based Hide/Show Animation */
-  @keyframes slideUp {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(-100%);
-    }
-  }
-
-  @keyframes slideDown {
-    0% {
-      transform: translateY(-100%);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
-  @media (max-width: 453px) {
-    .hideBelow453{
-      display: none !important;
-    }
-  }
